--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,9 +1,9 @@
 name: Update readme with blog posts
-on: 
+on:
   schedule:
-    # Once a day at 8 AM
-    - cron: 0 8 * * *
-    workflow_dispatch:
+    # Runs every hour
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   update:
