--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 name: Update readme with blog posts
 on:
   schedule:
-    # Runs every hour
+    # Runs every day
     - cron: '0 0 * * *'
   workflow_dispatch:
 
